--- a/task-03/index.html
+++ b/task-03/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Drum Kit</title>
-  <link rel="stylesheet" href="/home/vaibhavreddy/praveshan-tasks/task-08/styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 
@@ -20,7 +20,7 @@
     <button class="k drum">k</button>
     <button class="l drum">l</button>
   </div>
-  <script src="/home/vaibhavreddy/praveshan-tasks/task-08/index.js"></script>
+  <script src="index.js"></script>
 
 
 </body>
